fixed activate,deactivate user endpoints
